<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".MyProfile"
    android:orientation="vertical"
    android:padding="16dp">

    <android.support.v7.widget.CardView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:cardCornerRadius="16dp"
        android:layout_gravity="center"
        android:innerRadius="0dp"
        android:shape="ring"
        android:thicknessRatio="1.9">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:adjustViewBounds="true"
                android:contentDescription="@string/my_profile"
                android:src="@drawable/my_profile"/>

            <TextView
                android:layout_gravity="center_horizontal"
                android:layout_margin="8dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/edmore_m_gonese"
                android:textAppearance="@style/LargeText"/>
        </LinearLayout>

    </android.support.v7.widget.CardView>

   <android.support.v7.widget.CardView
       android:layout_marginTop="16dp"
       android:layout_marginBottom="16dp"
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       app:cardCornerRadius="16dp"
       android:layout_gravity="center"
       android:innerRadius="0dp"
       android:shape="ring"
       android:thicknessRatio="1.9"
       app:contentPadding="16dp">
       <LinearLayout
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:orientation="vertical">
           <TextView
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:text="@string/track_android"
               android:textAppearance="@style/NormalText"/>

           <TextView
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:text="@string/country_zimbabwe"
               android:textAppearance="@style/NormalText"/>

           <TextView
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:text="@string/developer_email"
               android:textAppearance="@style/NormalText"/>
           <TextView
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:text="@string/developer_phone"
               android:textAppearance="@style/NormalText"/>

           <TextView
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:text="@string/slack_username_digolodollarz"
               android:textAppearance="@style/NormalText"/>
       </LinearLayout>
   </android.support.v7.widget.CardView>

</LinearLayout>
    </ScrollView>